third_party/wasm/vendor/zerocopy/tests/ui-stable/try_transmute_mut-src-not-intobytes.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> tests/ui-stable/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Src`
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `Src`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
           and $N others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
  --> src/util/macro_util.rs
   |
   |     pub fn transmute_mut(self) -> &'a mut Dst
   |            ------------- required by a bound in this associated function
   |     where
   |         Src: FromBytes + IntoBytes,
   |                          ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> tests/ui-stable/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Dst`
   |
   = note: Consider adding `#[derive(FromBytes)]` to `Dst`
   = help: the following other types implement trait `FromBytes`:
             ()
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
             AtomicU32
           and $N others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
  --> src/util/macro_util.rs
   |
   |     pub fn transmute_mut(self) -> &'a mut Dst
   |            ------------- required by a bound in this associated function
...
   |         Dst: FromBytes + IntoBytes,
   |              ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: IntoBytes` is not satisfied
  --> tests/ui-stable/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Dst`
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `Dst`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
           and $N others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
  --> src/util/macro_util.rs
   |
   |     pub fn transmute_mut(self) -> &'a mut Dst
   |            ------------- required by a bound in this associated function
...
   |         Dst: FromBytes + IntoBytes,
   |                          ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
